--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -3,6 +3,7 @@
   width: 100%;
   z-index: 200;
   background-color: var(--dark-color);
+  overflow: visible;
 }
 
 .section--header .container {
